rename super unlucky seed to disaster seed

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1246,7 +1246,7 @@
           <p>Mr. Drone family monsters will always drop the following grasses:<br>Mr. Drone = Strength Grass, Mr. Helico = Happy Grass, Mr. Gyro = Revival Grass.</p>
           <p>Revival Grass will activate even if it's in an unidentified state, as long as it's not inside a pot.</p>
           <p>There are many nice grasses in the 500G price range such as Dragon Grass, Sight Grass, and Otogiriso,<br>so it's better to keep them on hand for emergencies or synthesis early game instead of eating them right away.</p>
-          <p>Twisty Grass, Shrink Seed, and Poison Grass are the only negative effect grasses that can be found on the ground.<br>Super Unlucky Seed is a shop exclusive, and Unlucky Seed is only found in shops or from Presto Pots.<br>So there isn't much risk in eating grasses to identify them. However, you'll want to avoid doing so<br>to prevent accidentally eating a Herb or Life Grass before synthesizing a Healing Sword.</p>
+          <p>Twisty Grass, Shrink Seed, and Poison Grass are the only negative effect grasses that can be found on the ground.<br>Disaster Seed is a shop exclusive, and Unlucky Seed is only found in shops or from Presto Pots.<br>So there isn't much risk in eating grasses to identify them. However, you'll want to avoid doing so<br>to prevent accidentally eating a Herb or Life Grass before synthesizing a Healing Sword.</p>
           <p>If you arrive at a floor with Mixer monsters without having been able to identify your grass items,<br>you can still synthesize them in hopes of one of them being a Healing Sword ingredient.<br>Throw an unneeded weapon at a Mixer, and then throw the grass item you want to identify.<br>If the synthesis worked, you can check the seal and make note of it,<br>and if it didn't, you can go ahead and eat the grass to identify it.</p>
           <p>Grass price chart:</p>
           <table>
@@ -1284,7 +1284,7 @@
               <td>Life Grass</td>
               <td rowspan="5">400</td>
               <td rowspan="5">200</td>
-              <td rowspan="4">Don't eat until Life Grass is identified.<br>Shrink and Super Unlucky seeds appear in shops between 71~90F.<br>However, Traders can have Shrink Seeds for sale on earlier floors.</td>
+              <td rowspan="4">Don't eat until Life Grass is identified.<br>Shrink and Disaster seeds appear in shops between 71~90F.<br>However, Traders can have Shrink Seeds for sale on earlier floors.</td>
             </tr>
             <tr>
               <td>Antidote Grass</td>
@@ -1296,7 +1296,7 @@
               <td>Shrink Seed</td>
             </tr>
             <tr>
-              <td>Super Unlucky Seed</td>
+              <td>Disaster Seed</td>
               <td>★ Shop exclusive, and only found between 71~90F.<br>Don't eat 400G grasses found in shops after 70F.</td>
             </tr>
             <tr>
@@ -1688,7 +1688,7 @@
           <p>The classic power type monster of the series, Minotaur (78~85F), also makes an appearance.<br>It has a 25% chance to deal a x1.4 damage critical hit, but can be weakened by splashing water using a Water Pot.<br>Mixergon appears alongside Minotaur between 78~80F, so you might be able to synthesize a Minotaur's Axe<br>if you're lucky enough to get the drop (10% chance), greatly increasing your damage output.<br>However, it might not be worth the trouble of using items such as Synthesis Pot, Blank Scroll, and Purify Scroll<br>to synthesize it, if you have enough strength already or have a good number of staves on hand.</p>
           <p>Mixergons won't be available past 80F, so wrap up any synthesis you need before proceeding past that floor.</p>
           <p>N'dubba 60yr (80~94F) moves at double speed, and hits as hard as Gigahead or Megataur when both hits connect.<br>It might be best to assume all items on the floor are N'dubbas at this point, to avoid getting hit by surprise attacks.<br>Safely check for N'dubbas by having an ally monster stand on top of an item, and then switching places with it.</p>
-          <p>The merchandise table for shops changes from 71F. Be extremely cautious of unidentified grasses from this point.<br>A 400G grass could be a Super Unlucky Seed, which lowers your level back down to 1, likely ending your adventure.<br>Upgrade Pot can now be seen in shops, so go ahead and read Restock Scrolls if you're trying to obtain one.<br>However, you might want to see if you come across a Pot Specialty Shop before doing so.<br>Also keep in mind that shops can only be found until 90F inside this dungeon.</p>
+          <p>The merchandise table for shops changes from 71F. Be extremely cautious of unidentified grasses from this point.<br>A 400G grass could be a Disaster Seed, which lowers your level back down to 1, likely ending your adventure.<br>Upgrade Pot can now be seen in shops, so go ahead and read Restock Scrolls if you're trying to obtain one.<br>However, you might want to see if you come across a Pot Specialty Shop before doing so.<br>Also keep in mind that shops can only be found until 90F inside this dungeon.</p>
           <h3 id="floor_86_99">86~99F</h3>
           <p>Monsters include Gigahead (84~99F), and Typhoon, Megataur, Emperor Tusker, Stun Scorpion (86~99F).</p>
           <p>The final stretch. Highly recommended to rush to the stairs on each floor, unless you're aiming for a Golden Interval.<br>Don't hesitate to use items now, since this floor range is why you were saving them to begin with.<br>Many of the monsters here use regular attacks, so seals like バ and 眠 will have a chance to shine.</p>
@@ -1700,7 +1700,7 @@
           <h4 id="floor_86_90">86~90F</h4>
           <p>The monster table still includes Hyper Gazer and Shihan, so consider waiting until 91F<br>before throwing an Extinction Scroll so that you don't indirectly increase their appearance rate.<br>If you don't have the 山 (Echo Shield) seal, you'll want to be extra careful around Hyper Gazers.</p>
           <p>King Tusker (86~89F) and Monarch Tusker (88~90F) make a brief appearance.<br>They're weak on their own, but can cause problems if Shiren is sealed or slowed near stronger monsters.</p>
-          <p>Shops no longer appear after 90F, so keep that in mind if you're aiming for an Upgrade Pot,<br>Super Unlucky Seed, or an 8-digit score using bags of 1,000,000 Gitan.</p>
+          <p>Shops no longer appear after 90F, so keep that in mind if you're aiming for an Upgrade Pot,<br>Disaster Seed, or an 8-digit score using bags of 1,000,000 Gitan.</p>
           <h4 id="floor_90">90F+</h4>
           <p>Cave Mamel (90~99F) shouldn't be too threatening, since it has lower defense in Shiren 2 compared to other games.</p>
           <p>Shihan and Hyper Gazer no longer appear from 91F, so it's a good time to throw an Extinction Scroll at a monster.<br>The monster you choose should be based on your shield's strength and seals.</p>
@@ -4933,7 +4933,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Super Unlucky Seed</td>
+                <td>Disaster Seed</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -5974,7 +5974,7 @@
                 <td>☆</td>
               </tr>
               <tr>
-                <td>Super Unlucky Seed</td>
+                <td>Disaster Seed</td>
                 <td></td>
                 <td></td>
                 <td>☆</td>
