--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -324,7 +324,7 @@
                   <td>消</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/grass.html#super_unlucky_seed">Super Unlucky Seed</a></td>
+                  <td><a href="/shiren2/html/item/grass.html#disaster_seed">Disaster Seed</a></td>
                   <td>超</td>
                 </tr>
                 <tr>
