--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -338,7 +338,7 @@
             <td>×</td>
             <td>10</td>
             <td>5</td>
-            <td>Super Unlucky Seed</td>
+            <td>Disaster Seed</td>
             <td class="text_left">Swinging the weapon decreases level by 1.</td>
           </tr>
           <tr>
@@ -402,7 +402,7 @@
             <td>×</td>
             <td>0</td>
             <td>0</td>
-            <td>Unlucky Seed<br>Super Unlucky Seed</td>
+            <td>Unlucky Seed<br>Disaster Seed</td>
             <td class="text_left">Weapon cannot be unequipped.<br>The curse can be removed by reading a Purify Scroll.</td>
           </tr>
         </table>
@@ -637,7 +637,7 @@
             <td>×</td>
             <td>10</td>
             <td>5</td>
-            <td>Super Unlucky Seed</td>
+            <td>Disaster Seed</td>
             <td class="text_left">Decrease level by 1 every time you receive damage.</td>
           </tr>
           <tr>
@@ -701,7 +701,7 @@
             <td>×</td>
             <td>0</td>
             <td>0</td>
-            <td>Unlucky Seed<br>Super Unlucky Seed</td>
+            <td>Unlucky Seed<br>Disaster Seed</td>
             <td class="text_left">Shield cannot be unequipped.<br>The curse can be removed by reading a Purify Scroll.</td>
           </tr>
         </table>
@@ -1846,7 +1846,7 @@
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
-            <td>Super Unlucky Seed</td>
+            <td>Disaster Seed</td>
             <td class="text_left"></td>
           </tr>
           <tr>
@@ -1957,7 +1957,7 @@
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
-            <td>Super Unlucky Seed</td>
+            <td>Disaster Seed</td>
             <td class="text_left"></td>
           </tr>
           <tr>
