--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -1251,7 +1251,7 @@
                   <td>2500</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/weapon.html#cyclops_killer">Cyclops_Killer</a></td>
+                  <td><a href="/shiren2/html/item/weapon.html#cyclops_killer">Cyclops Killer</a></td>
                   <td>目</td>
                   <td>9</td>
                   <td>4</td>
