working on the seal page

--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -1785,7 +1785,12 @@
             <td>○</td>
           </tr>
         </table>
-        <p>Text</p>
+        <p>Neither shield can block objects falling from above.<br>Sources of objects falling from above include Droplet, Burrs, Rockfall, and Rockslide traps.<br>Though none of those deal much damage except for Rockslide Trap, and it's possible to prevent<br>traps from activating by using the カ seal from a Traproid Shield, so it's not really a big deal.</p>
+        <p>If a shield has both 身 and 返 seals, you'll be able to dodge piercing items while reflecting everything else.</p>
+        <p>All that said, the question remains, if you only synthesize one, which is better?</p>
+        <p>Reflect Shield allows you to evade a greater number of things, since it can reflect both items and monsters.<br>Not being able to collect dodged items isn't that important for post-game dungeons, since by the time you<br>obtain a Reflect Shield, you'll likely only be interested in things that cannot be found on the ground.<br>You can also read a Slumber Scroll to prevent a Kappa monster from throwing items,<br>and you always need to act carefully around Kengo monsters to avoid having your shield disarmed.<br>Lastly, Silver Arrows from Horse Ronin monsters don't deal much damage if your shield is strong,<br>so you only really need to watch out for Pierce Statues.</p>
+        <p>Dodge Shield allows you to collect items thrown by Kappa and Water Strider monsters,<br>and also lets you collect Wooden and Iron arrows from Bow Boy family monsters.<br>Dodged items can trigger traps if you're standing on one, but that situation is rare, so it's not a big concern.<br>The biggest drawback is that you can't dodge Wolf Droid bombs or Pop Tank cannonballs,<br>meaning there's a significant risk for bracelets cracking compared to Reflect Shield.</p>
+        <p>In the end, the answer is that Reflect Shield is used more often, but it comes down to what you value more.</p>
         <h2 id="seals_caution">Seals Requiring Caution</h2>
         <h3 id="seals_caution_weapon">Weapon</h3>
         <table class="table_seals">
@@ -1799,67 +1804,67 @@
             <td class="seal_equipment">掘</td>
             <td>×</td>
             <td>Pickaxe</td>
-            <td class="text_left"></td>
+            <td class="text_left">The weapon will break after a while of digging through walls,<br>so you should synthesize a Wonder Pickaxe instead of a regular one.<br>(It's safe to dig up to 14 times, but you risk breaking the weapon beyond that).</td>
           </tr>
           <tr>
             <td class="seal_equipment">食</td>
             <td>×</td>
             <td>Gobo</td>
-            <td class="text_left"></td>
+            <td class="text_left">The weapon will vanish if you accidentally select [Eat].<br>It's also worse than Dried Bonito in terms of restoring fullness. (20%)</td>
           </tr>
           <tr>
             <td class="seal_equipment">ケ</td>
             <td>×</td>
             <td>Kengo's Katana</td>
-            <td class="text_left"></td>
+            <td class="text_left">Knocking a weapon away from an enemy deals 0 damage,<br>so this seal effectively makes your attacks miss more often.</td>
           </tr>
           <tr>
             <td class="seal_equipment">ス</td>
             <td>×</td>
             <td>Spark Sword</td>
-            <td class="text_left"></td>
+            <td class="text_left">Synthesizing the 必 seal will guarantee that all of your attacks connect,<br>so this seal becomes completely pointless.<br>However, Homing Blade doesn't appear in Road to the End, so it can be used there.</td>
           </tr>
           <tr>
             <td class="seal_equipment">捨</td>
             <td>×</td>
             <td>Disposable Sword</td>
-            <td class="text_left"></td>
+            <td class="text_left">Lowers weapon attack every time you attack. Negative seal like 不 and 超.</td>
           </tr>
           <tr>
             <td class="seal_equipment">木</td>
             <td>×</td>
             <td>Mallet</td>
-            <td class="text_left"></td>
+            <td class="text_left">Similar to Pickaxe. If you want to destroy traps with regular attacks,<br>synthesize the 鉄 seal from an Iron Hammer instead.<br>Note that this seal is needed in synthesizing a Kaburasutegi.</td>
           </tr>
           <tr>
             <td class="seal_grass">ち</td>
             <td>○</td>
             <td>Strength Grass</td>
-            <td class="text_left"></td>
+            <td class="text_left">Increases weapon attack by 2, but it's not worth taking up a synthesis slot.<br>2 weapon attack = 1 strength, so it's better to use the Strength Grass like normal.</td>
           </tr>
           <tr>
             <td class="seal_grass">不</td>
             <td>○</td>
             <td>Unlucky Seed</td>
-            <td class="text_left"></td>
+            <td class="text_left">Decreases weapon strength. Doesn't lower enemy level or have any other effects.</td>
           </tr>
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
             <td>Disaster Seed</td>
-            <td class="text_left"></td>
+            <td class="text_left">Lowers Shiren's level by 1 every time he swings the weapon.<br>Doesn't have any other effects like lowering enemy HP to 1.</td>
           </tr>
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
             <td>Purify Scroll</td>
-            <td class="text_left"></td>
+            <td class="text_left">Protects only the weapon with this seal from being cursed.<br>Since it doesn't protect any other equipment from being cursed,<br>it's better to synthesize this seal onto a shield to protect bracelets.</td>
           </tr>
           <tr>
             <td class="seal_scroll">銀</td>
             <td>×</td>
             <td>Silver Arrow</td>
-            <td class="text_left"></td>
+            <td class="text_left">You lose the ability to synthesize using Mixer family monsters,<br>and the weapon is permanently lost if it gets disarmed by a Kengo family monster.<br>It does allow you to attack monsters inside walls, but the drawbacks are greater.</td>
           </tr>
         </table>
         <h3 id="seals_caution_shield">Shield</h3>
@@ -1874,97 +1879,97 @@
             <td class="seal_equipment">サ</td>
             <td>×</td>
             <td>Nirvana Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Max fullness doesn't return to normal when the shield is unequipped.<br>You can increase it again using items like Expand Seed after unequipping the shield.<br>Equipping a shield with this seal at 0% max fullness will increase max fullness to 1%.</td>
           </tr>
           <tr>
             <td class="seal_equipment">見</td>
             <td>○</td>
             <td>Evasive Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Increases evasion, meaning seals that have an effect when receving damage<br>such as 弟 (use enemy attacks to restore HP) have fewer chances to activate.<br>However, generally the advantages outweigh this negative.</td>
           </tr>
           <tr>
             <td class="seal_equipment">う</td>
             <td>×</td>
             <td>Scale Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Blocks poison only from Poison Arrows, Poison Grass, and Scorpions.<br>In other words, it doesn't prevent Slug licks from lowering strength.<br>That said, Poison Traps are pretty common, so it's still an effective seal<br>especially inside <a href="">Road to the End</a> where strength matters a lot.</td>
           </tr>
           <tr>
             <td class="seal_equipment">バ</td>
             <td>○</td>
             <td>Counter Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">The stronger your shield, the less damage you reflect back at enemies.<br>Rancor and Intolerable slugs can divide as a result of reflected damage.<br>The damage reflect animation also slows down the pace of the game.</td>
           </tr>
           <tr>
             <td class="seal_equipment">幸</td>
             <td>○</td>
-            <td>Happy Grass</td>
-            <td class="text_left"></td>
+            <td>Happy Shield</td>
+            <td class="text_left">The stronger your shield, the less experience you gain from taking damage.</td>
           </tr>
           <tr>
             <td class="seal_equipment">銭</td>
             <td>○</td>
             <td>Gamarra Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">The stronger your shield, the less Gitan you gain from taking damage.<br>The amount of Gitan you gain is also low in general, so it's a wasted slot.</td>
           </tr>
           <tr>
             <td class="seal_equipment">重</td>
             <td>×</td>
             <td>Heavy Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Doubles your hunger rate. Negative seal like 捨, 不, and 超.</td>
           </tr>
           <tr>
             <td class="seal_equipment">捨</td>
             <td>×</td>
             <td>Disposable Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Decreases defense every time you receive damage.<br>It's best to use Disposable Shields without synthesizing them with anything.</td>
           </tr>
           <tr>
             <td class="seal_grass">飯</td>
             <td>○</td>
             <td>Riceballs<br>(Not spoiled)</td>
-            <td class="text_left"></td>
+            <td class="text_left">Negative seal that occasionally turns Shiren into a Riceball when taking damage.</td>
           </tr>
           <tr>
             <td class="seal_grass">消</td>
             <td>×</td>
             <td>Antidote Grass</td>
-            <td class="text_left"></td>
+            <td class="text_left">Same as the う seal from a Scale Shield. Poison Traps can be countered using<br>Dodge or Traproid shields, so this seal isn't as important for carry-in dungeons.<br>However, those two shields are rare, so it's an effective seal until you obtain them.</td>
           </tr>
           <tr>
             <td class="seal_grass">命</td>
             <td>○</td>
             <td>Life Grass</td>
-            <td class="text_left"></td>
+            <td class="text_left">Increases shield strength by 2, but it's not worth taking up a synthesis slot.</td>
           </tr>
           <tr>
             <td class="seal_grass">幸</td>
             <td>○</td>
             <td>Happy Grass</td>
-            <td class="text_left"></td>
+            <td class="text_left">Similar to Happy Shield, the stronger your shield, the less experience you gain.</td>
           </tr>
           <tr>
             <td class="seal_grass">天</td>
             <td>○</td>
             <td>Angel Seed</td>
-            <td class="text_left"></td>
+            <td class="text_left">Same as 幸. It should be synthesized onto a weapon instead of a shield.</td>
           </tr>
           <tr>
             <td class="seal_grass">不</td>
             <td>○</td>
             <td>Unlucky Seed</td>
-            <td class="text_left"></td>
+            <td class="text_left">Decreases shield strength. Doesn't lower enemy level or have any other effects.</td>
           </tr>
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
             <td>Disaster Seed</td>
-            <td class="text_left"></td>
+            <td class="text_left">Lowers Shiren's level by 1 every time he receives damage.<br>Doesn't have any other effects like lowering enemy HP to 1.</td>
           </tr>
           <tr>
             <td class="seal_scroll">銀</td>
             <td>×</td>
             <td>Silver Arrow</td>
-            <td class="text_left"></td>
+            <td class="text_left">You lose the ability to synthesize using Mixer family monsters,<br>and the shield is permanently lost if it gets disarmed by a Kengo family monster.<br>No advantages for shields except for Halberd Shield.</td>
           </tr>
         </table>
       </div>
