--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -19,7 +19,10 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <h2 class="page_heading">Seals</h2>
-        <p>Seals are special abilities that can be <a href="">synthesized</a> onto weapons or shields.<br>Each seal is represented as single Japanese character, and the color depends on the source item.<br>The three colors are: equipment (blue), food/grasses (green), and scrolls (red).<br>Some seals like 金 can be found in two colors, and have a slightly different effect based on color.<br>Generally seals can make your adventure smoother, but some of them are a double-edged sword,<br>have a pointless effect, or have an outright negative effect, so some care is needed.<br>
+        <p>Seals are special abilities that can be <a href="">synthesized</a> onto weapons or shields.</p>
+        <p>Each seal is represented as single Japanese character, and the color depends on the source item.<br>The three colors are: equipment (blue), food/grasses (green), and scrolls (red).<br>Some seals like 金 can be found in two colors, and have a slightly different effect based on color.</p>
+        <p>Generally seals can make your adventure smoother, but some of them are a double-edged sword,<br>have a pointless effect, or have an outright negative effect, so some care is needed.</p>
+        <p>
         The Blacksmith at Shuten Halfway can erase unwanted seals for a fee.<br>Gyandora and Monsoon Doll's special attacks can also remove seals at random.</p>
         <ul id="quick_links">
           <li>
